Add major part of the en content

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,9 @@ languages:
   en:
     languageName: English
     weight: 1
-
+  nl:
+    languageName: Nederlands
+    weight: 3
 # Control TOC depth
 markup:
   tableOfContents:
