--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -15,10 +15,12 @@ company:
   url: "https://www.alliander.com"
 
 # your resume. this file path should be relative to you "static" directory
+#TODO: Add resume
 #resume: "files/resume.pdf"
 
 # a summary about you
 #summary: 'I am a passionate software engineer with x years of working experience. I built OSS tools for [Kubernetes](https://kubernetes.io/) using GO. My tools help people to deploy their workloads in Kubernetes. Sometimes, I work on some fun projects such as writing a theme, etc.'
+#TODO: Write summary
 summary: 'hoi'
 # your social links
 # give as many as you want. use font-awesome for the icons.
@@ -34,9 +36,15 @@ socialLinks:
 # give the percentage between 50 to 100 with 5 intervals.
 # currently supported colors: blue, yellow, pink, green, sky, orange
 softSkills:
-  - name: Leadership
+  - name: Learning fast
     percentage: 85
-    color: blue
-  - name: Team Work
-    percentage: 90
+    color: green
+  - name: Teamwork
+    percentage: 100
     color: yellow
+  - name: Problem solving
+    percentage: 80
+    color: blue
+  - name: Perseverance
+    percentage: 90
+    color: sky
