--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -19,14 +19,12 @@ experiences:
     positions:
       - designation: DevOps Engineer
         start: Feb 2020
-        # don't provide end date if you are currently working there. It will be replaced by "Present"
-        # end: Dec 2020
-        # give some points about what was your responsibilities at the company.
         responsibilities:
           - Design and develop GitOps workflows for multitenant Kubernetes & OpenShift clusters.
           - Assist in architecting robust architectures for several applications.
           - Software development in Java, Kotlin & Python.
           - Teach Kubernetes and cloud native principles to tenants of our platform.
+          - Guide the scrum process as scrum master (intermittently)
 
       - designation: Junior DevOps Engineer
         start: Jun 2018
@@ -35,6 +33,7 @@ experiences:
           - Support users and expand on the existing Kubernetes platform.
           - Software development in Java.
           - Expand and improve on existing CI/CD pipelines.
+          - Guide the scrum process as scrum master (intermittently)
 
   - company:
       name: Delta Lloyd / NN
