--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -19,16 +19,21 @@ skills:
   - name: Kotlin development
     logo: "/images/sections/skills/kotlin-logo.svg"
     summary: "My preferred language for professional and personal software development. Capable of writing clean, scalable, testable and maintainable software."
-    url: https://kotlinlang.org/""
+    url: "https://kotlinlang.org/"
 
   - name: Java development
     logo: "/images/sections/skills/java-logo.png"
-    summary: "Main language used in most projects, experience in Spring Boot and Java 11+ on several projects."
+    summary: "Main language used in most projects, experience in smaller and bigger codebases, using Java 8 through 14 on several projects."
     url: "https://java.com/"
+
+  - name: Spring (Boot)
+    logo: "/images/sections/skills/spring-logo.svg"
+    summary: "Used Spring Boot in several projects, from small to large, both in Kotlin and Java."
+    url: "https://spring.io/"
 
   - name: Python development
     logo: "/images/sections/skills/python-logo.png"
-    summary: "Mainly used for small DevOps scripts."
+    summary: "Mainly used for small DevOps scripts and building API's that integrate with the infrastructure."
     url: "https://python.org/"
 
   - name: Linux
