--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -15,7 +15,7 @@ experiences:
       url: "https://www.alliander.com"
       location: Arnhem
       # company overview
-      overview: A Distribution system operator responsible for delivering electricity and gas to nearly 6 million households and companies
+      overview: A Distribution system operator responsible for delivering electricity and gas to nearly 6 million households and companies.
     positions:
       - designation: DevOps Engineer
         start: Feb 2020
