--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   template: sections/about.html
 
 # your designation
-designation: DevOps Engineer
+designation: DevOps Consultant
 # your company information
 company:
   name: DevOn
