Update resume with latest experience (including more extensive description of azure experience)

--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -22,6 +22,9 @@ experiences:
           - Improving reliability, stability and security of applications and platforms.
           - Aiding teams in their migration to cloud-native development.
           - Advocating and teaching DevOps principles to development teams.
+          - Building shared Azure DevOps templates for the organization.
+          - Improving applications and pipelines running on several cloud platforms (AWS, Azure & others)
+          - Migrating teams to and designing serverless architectures on AWS.
 
   - company:
       name: DevOn
@@ -48,6 +51,7 @@ experiences:
         end: Dec 2021
         responsibilities:
           - Building serverless workflows in AWS Lambda.
+          - Building and designing compliance automation using both Azure and AWS components.
           - Create CI/CD pipelines.
           - Provision infrastructure as code using Terraform on Azure, Azure DevOps and AWS.
           - Presenting and explaining the solutions to the (internal) customers.
@@ -66,7 +70,7 @@ experiences:
         responsibilities:
           - Maintain and expand our current multitenant Kubernetes and OpenShift platforms which serve approximately 50 development teams.
           - Build a fully automated workflow to provision all necessary resources and CI/CD capabilities for new tenants, new teams can start building within 10 minutes.
-          - Design and build CI/CD workflows using several different tools (Jenkins, Tekton, GitLab CI & ArgoCD).
+          - Design and build CI/CD workflows using several different tools (Jenkins, Tekton, GitLab CI & ArgoCD), integrating with several platforms (AWS, Azure, Kubernetes & On-prem).
           - Build and deploy Helm charts.
           - Assist in architecting robust, high-available architectures for several applications.
           - Software development in Java (11+), Kotlin (1.4+) & Python (3.6+).
