--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -47,4 +47,4 @@ skills:
 
   - name: Cloud Computing
     logo: "/images/sections/skills/cloud.png"
-    summary: "Extensive professional experience with AWS, personal experience with DigitalOcean comfortable in using others."
+    summary: "Extensive professional experience with both AWS and Azure, and personal experience with others."
