--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -18,13 +18,27 @@ experiences:
     positions:
       - designation: Site Reliability Engineer
         start: Jan 2022
-        responsibilities:
+        responsibilities/results:
           - Improving reliability, stability and security of applications and platforms.
           - Aiding teams in their migration to cloud-native development.
           - Advocating and teaching DevOps principles to development teams.
           - Building shared Azure DevOps templates for the organization.
           - Improving applications and pipelines running on several cloud platforms (AWS, Azure & others)
           - Migrating teams to and designing serverless architectures on AWS.
+
+    - company:
+      name: NN
+      url: "https://www.nn.nl"
+      location: Rotterdam
+      overview: 
+    positions:
+      - designation: SRE coach/trainer 
+        start: Apr 2023
+        end: Jun 2023
+        responsibilities/results:
+          - Two month training program in which the team created a complete monitoring setup for 2 of their applications.
+          - Both theoretical overview as well as practical knowledge.
+          - Very high satisfaction from the participants.
 
   - company:
       name: DevOn
@@ -35,7 +49,7 @@ experiences:
       - designation: DevOps Consultant
         start: Oct 2021
         end: Dec 2021
-        responsibilities:
+        responsibilities/results:
           - Building and designing CI/CD pipelines and components in several programming languages.
           - Providing and developing training in several DevOps related topics.
           - Cloud engineering and consultancy.
@@ -49,7 +63,7 @@ experiences:
       - designation: DevOps Consultant (through DevOn)
         start: Oct 2021
         end: Dec 2021
-        responsibilities:
+        responsibilities/results:
           - Building serverless workflows in AWS Lambda.
           - Building and designing compliance automation using both Azure and AWS components.
           - Create CI/CD pipelines.
@@ -67,7 +81,7 @@ experiences:
       - designation: DevOps Engineer
         start: Feb 2020
         end: Sept 2021
-        responsibilities:
+        responsibilities/results:
           - Maintain and expand our current multitenant Kubernetes and OpenShift platforms which serve approximately 50 development teams.
           - Build a fully automated workflow to provision all necessary resources and CI/CD capabilities for new tenants, new teams can start building within 10 minutes.
           - Design and build CI/CD workflows using several different tools (Jenkins, Tekton, GitLab CI & ArgoCD), integrating with several platforms (AWS, Azure, Kubernetes & On-prem).
@@ -80,7 +94,7 @@ experiences:
       - designation: Junior DevOps Engineer
         start: Jun 2018
         end: Feb 2020
-        responsibilities:
+        responsibilities/results:
           - Support users and expand on the existing Kubernetes platform serving approximately 10 development teams.
           - Enterprise software development in Java 8, for an application keeping the electricity network stable.
           - Expand and improve on existing CI/CD pipelines using Jenkins.
@@ -95,7 +109,7 @@ experiences:
       - designation: Developer
         start: Dec 2016
         end: May 2018
-        responsibilities:
+        responsibilities/results:
           - Enhance the claims processes using Business Process Management.
           - Analysis of business requirements.
           - Basic Java development.
@@ -110,7 +124,8 @@ experiences:
       - designation: Researcher
         start: Dec 2015
         end: Jan 2016
-        responsibilities:
+        responsibilities/results:
           - Set up the research project.
           - Collect field data.
-          - Analyze collected data.
+          - Analyzed collected data.
+          - Published paper in recognized journal.
