--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -18,7 +18,7 @@ experiences:
     positions:
       - designation: Site Reliability Engineer
         start: Jan 2022
-        responsibilities/results:
+        responsibilities:
           - Improving reliability, stability and security of applications and platforms.
           - Aiding teams in their migration to cloud-native development.
           - Advocating and teaching DevOps principles to development teams.
@@ -35,7 +35,7 @@ experiences:
       - designation: SRE coach/trainer 
         start: Apr 2023
         end: Jun 2023
-        responsibilities/results:
+        responsibilities:
           - Two month training program in which the team created a complete monitoring setup for 2 of their applications.
           - Both theoretical overview as well as practical knowledge.
           - Very high satisfaction from the participants.
@@ -49,7 +49,7 @@ experiences:
       - designation: DevOps Consultant
         start: Oct 2021
         end: Dec 2021
-        responsibilities/results:
+        responsibilities:
           - Building and designing CI/CD pipelines and components in several programming languages.
           - Providing and developing training in several DevOps related topics.
           - Cloud engineering and consultancy.
@@ -63,7 +63,7 @@ experiences:
       - designation: DevOps Consultant (through DevOn)
         start: Oct 2021
         end: Dec 2021
-        responsibilities/results:
+        responsibilities:
           - Building serverless workflows in AWS Lambda.
           - Building and designing compliance automation using both Azure and AWS components.
           - Create CI/CD pipelines.
@@ -81,7 +81,7 @@ experiences:
       - designation: DevOps Engineer
         start: Feb 2020
         end: Sept 2021
-        responsibilities/results:
+        responsibilities:
           - Maintain and expand our current multitenant Kubernetes and OpenShift platforms which serve approximately 50 development teams.
           - Build a fully automated workflow to provision all necessary resources and CI/CD capabilities for new tenants, new teams can start building within 10 minutes.
           - Design and build CI/CD workflows using several different tools (Jenkins, Tekton, GitLab CI & ArgoCD), integrating with several platforms (AWS, Azure, Kubernetes & On-prem).
@@ -94,7 +94,7 @@ experiences:
       - designation: Junior DevOps Engineer
         start: Jun 2018
         end: Feb 2020
-        responsibilities/results:
+        responsibilities:
           - Support users and expand on the existing Kubernetes platform serving approximately 10 development teams.
           - Enterprise software development in Java 8, for an application keeping the electricity network stable.
           - Expand and improve on existing CI/CD pipelines using Jenkins.
@@ -109,7 +109,7 @@ experiences:
       - designation: Developer
         start: Dec 2016
         end: May 2018
-        responsibilities/results:
+        responsibilities:
           - Enhance the claims processes using Business Process Management.
           - Analysis of business requirements.
           - Basic Java development.
@@ -124,7 +124,7 @@ experiences:
       - designation: Researcher
         start: Dec 2015
         end: Jan 2016
-        responsibilities/results:
+        responsibilities:
           - Set up the research project.
           - Collect field data.
           - Analyzed collected data.
